--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
 }
-
+def version = "1.4.199"
 
 
 repositories {
@@ -9,7 +9,9 @@ repositories {
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/com.h2database/h2
+// https://mvnrepository.com/artifact/com.h2database/h2
+
+    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
